@@ -230,34 +230,6 @@
                     </dependency>
                 </dependencies>
             </plugin>
-
-
-           <!-- <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.14.1</version>
-                <configuration>
-                    <argLine>-Xmx5000m -Djava.awt.headless=true -XX:MaxPermSize=1024m -XX:+UseConcMarkSweepGC
-                        -XX:OnOutOfMemoryError="kill -9 %p" -Djava.net.preferIPv4Stack=true
-                    </argLine>
-                    <reuseForks>false</reuseForks>
-                    <reportFormat>plain</reportFormat>
-                    <systemPropertyVariables>
-                        <java.io.tmpdir>${project.build.directory}</java.io.tmpdir>
-                    </systemPropertyVariables>
-                    <includes>
-                        <include>**/*TestsSuite.java</include>
-                        <include>**/*TestSuite.java</include>
-                        <include>**/Test*.java</include>
-                        <include>**/*Test.java</include>
-                        <include>**/*TestCase.java</include>
-                    </includes>
-                    <excludes>
-                        <exclude>**/*TestRun.java</exclude>
-                    </excludes>
-                </configuration>
-            </plugin>-->
-
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
